--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /.vscode
 *.mp4
 moosend_template.preview.html
+/admin
+/public_links
+moosend_template.html
+modèle_newsletter.html
+modèle_newsletter.html
+moosend_template.html
+sync_moosend.ps1
